--- a/css/main.css
+++ b/css/main.css
@@ -35,3 +35,45 @@
 	background-color: #e89380;
 	/*purple*/
 }
+
+/* Transitions */
+
+.transition .b1{
+	transition: width 1s ease-in-out 0.2s;
+}
+
+.transition .b1:hover{
+	width: 400px;
+}
+
+.transition .b2{
+	transition: width 1s, height 1s ease-in-out;
+	transition-delay: 0.5s;
+}
+
+.transition .b2:hover{
+	width: 400px;
+	height: 100px;
+}
+
+/* Cubic-bezier */
+
+.transition .b3{
+	transition: transform 2s cubic-bezier(.17,.67,.31,1.59) 0.5s; 
+}
+
+.transition .b3:hover{
+	transform:rotate(180deg);
+}
+
+.transition .b4{
+	transition: all 1s ease-in-out 0.5s; 
+}
+
+.transition .b4:hover{
+	transform:rotate(180deg);
+	border-radius: 25%;
+	background-color: #999;
+}
+
+
