--- a/css/main.css
+++ b/css/main.css
@@ -110,3 +110,80 @@
 .transform .b4:hover{
 	transform: skewX(0deg);
 }
+
+/* Animation */
+
+@keyframes changeColor{
+	from{
+		background-color: red;
+	}
+	to{
+		background-color: #999;
+	}
+}
+
+.animation .b1{
+	animation-name: changeColor;
+	animation-duration: 2s;
+	/* animation-delay: 1s; */
+	animation-fill-mode: forwards;
+	animation-iteration-count: 4;
+}
+
+@keyframes moveAround{
+	0%{
+		transform: translate(0px, 0px);
+	}
+
+	25%{
+		transform: translate(200px, 0px);
+	}
+
+	50%{
+		transform: translate(200px, 200px);
+	}
+
+	75%{
+		transform: translate(0px, 200px);
+	}
+
+	100%{
+		transform: translate(0px, 0px);
+	}
+}
+
+.animation .b2{
+	animation: moveAround 2s infinite ease-in-out 2s alternate;
+	/* animation-name: moveAround;
+	animation-duration: 1s;
+	animation-iteration-count: infinite; */
+}
+
+.animation .b3{
+	position: relative;
+	z-index: 2;
+}
+
+@keyframes transformer{
+	0%{
+		transform: translate(0px) rotate(0deg);
+		background-color: aliceblue;
+	}
+	
+	100%{
+		transform: translateX(600px) rotateX(180deg);
+		background-color: navy;
+	}
+}
+
+.animation .b3{
+	animation: transformer 1s infinite forwards alternate linear;
+}
+
+.animation .b4{
+	animation: transformer 1s infinite forwards alternate cubic-bezier(.17,.67,.31,1.59);
+}
+
+.animation .b4:hover{
+	animation-play-state: paused;
+}
